crates/sol-types/tests/ui/storage.stderr
error: No fail cases
 --> tests/ui/storage.rs:3:1
  |
3 | compile_error!("No fail cases");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
